# fazang

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  readme.org
.github/workflows/: build.yml
doc/: fazang_user_guide.org  fazang_user_guide.tex  ref.bib
example/ode/: data.F90  meson.build  param.F90
lib/sundials-6.1.1/: meson.build
lib/sundials-6.1.1/include/sundials/: sundials_config.h
lib/sundials_6.0.0/: meson.build
src/: abs.F90  acos.F90  acos.f90  acosh.F90  add.F90  add.f90  arith.F90  arith.f90  array_in_tape.F90  asin.F90  asin.f90  asinh.F90  atan.F90  atan.f90  atanh.F90  chain_eager_adj.F90  cos.F90  cos.f90  cosh.F90  cvodes.F90  cvodes_model.F90  cvodes_options.F90  digamma.F90  div.F90  div.f90  dot_product.F90  dot_product.f90  env.F90  env.f90  erf.F90  erfc.F90  exp.F90  exp.f90  fazang.F90  fazang.f90  grad.F90  grad.f90  hypot.F90  install-mod.py  inv.F90  (+48 more)
src/prob/: lognormal_lpdf.F90  meson.build  normal_lpdf.F90
subprojects/sundials/: meson.build
test/integration/ode/: data.F90  meson.build  param.F90
test/unit/: abs_test.F90  acos_test.F90  acos_test.f90  add_test.F90  add_test.f90  adstack_test.F90  adstack_test.f90  alloc_test.f90  asin_test.f90  atan_test.f90  cos_test.F90  cos_test.f90  cvodes_data_test.F90  cvodes_param_test.F90  cvodes_psens_rhs_test.F90  cvodes_rhs_test.F90  cvodes_sens_rhs_test.F90  cvodes_y0_test.F90  cvodes_ysens_rhs_test.F90  debug_test.F90  debug_test.f90  digamma_test.F90  div_test.F90  div_test.f90  dot_product_test.F90  dot_product_test.f90  erf_test.F90  exp_test.f90  grad_test.F90  grad_test.f90  hyperbolic_test.F90  hypot_test.F90  inv_logit_test.F90  log_gamma_test.F90  log_sum_exp_test.F90  log_test.F90  log_test.f90  logit_test.F90  matmul_test.F90  matmul_test.f90  (+28 more)
test/unit/prob/: lognormal_lpdf_test.F90  meson.build  normal_lpdf_test.F90
