sundials_inc = include_directories(
    'include',
    'src/sundials',
    'src/idas',
    'src/kinsol',
    'src/cvodes'
)

sundials_c_sources = files(
    'src/sunnonlinsol/newton/fmod/fsunnonlinsol_newton_mod.c',
    'src/sunnonlinsol/newton/sunnonlinsol_newton.c',
    # 'src/sunnonlinsol/petscsnes/sunnonlinsol_petscsnes.c',
    'src/sunnonlinsol/fixedpoint/fmod/fsunnonlinsol_fixedpoint_mod.c',
    'src/sunnonlinsol/fixedpoint/sunnonlinsol_fixedpoint.c',
    'src/sunlinsol/pcg/fmod/fsunlinsol_pcg_mod.c',
    'src/sunlinsol/pcg/sunlinsol_pcg.c',
    # 'src/sunlinsol/superlumt/sunlinsol_superlumt.c',
    'src/sunlinsol/band/sunlinsol_band.c',
    'src/sunlinsol/band/fmod/fsunlinsol_band_mod.c',
    'src/sunlinsol/spbcgs/sunlinsol_spbcgs.c',
    'src/sunlinsol/spbcgs/fmod/fsunlinsol_spbcgs_mod.c',
    'src/sunlinsol/dense/fmod/fsunlinsol_dense_mod.c',
    'src/sunlinsol/dense/sunlinsol_dense.c',
    'src/sunlinsol/spfgmr/fmod/fsunlinsol_spfgmr_mod.c',
    'src/sunlinsol/spfgmr/sunlinsol_spfgmr.c',
    'src/sunlinsol/sptfqmr/fmod/fsunlinsol_sptfqmr_mod.c',
    'src/sunlinsol/sptfqmr/sunlinsol_sptfqmr.c',
    'src/sunlinsol/spgmr/fmod/fsunlinsol_spgmr_mod.c',
    'src/sunlinsol/spgmr/sunlinsol_spgmr.c',
    # 'src/sunlinsol/lapackband/sunlinsol_lapackband.c',
    # 'src/sunlinsol/superludist/sunlinsol_superludist.c',
    # 'src/sunlinsol/klu/fmod/fsunlinsol_klu_mod.c',
    # 'src/sunlinsol/klu/sunlinsol_klu.c',
    # 'src/sunlinsol/lapackdense/sunlinsol_lapackdense.c',
    # 'src/sunmatrix/slunrloc/sunmatrix_slunrloc.c',
    'src/sunmatrix/band/fmod/fsunmatrix_band_mod.c',
    'src/sunmatrix/band/sunmatrix_band.c',
    'src/sunmatrix/dense/fmod/fsunmatrix_dense_mod.c',
    'src/sunmatrix/dense/sunmatrix_dense.c',
    'src/sunmatrix/sparse/fmod/fsunmatrix_sparse_mod.c',
    'src/sunmatrix/sparse/sunmatrix_sparse.c',
    'src/sundials/sundials_iterative.c',
    'src/sundials/sundials_version.c',
    'src/sundials/sundials_futils.c',
    'src/sundials/fmod/fsundials_profiler_mod.c',
    'src/sundials/fmod/fsundials_types_mod.c',
    'src/sundials/fmod/fsundials_nonlinearsolver_mod.c',
    'src/sundials/fmod/fsundials_linearsolver_mod.c',
    'src/sundials/fmod/fsundials_futils_mod.c',
    'src/sundials/fmod/fsundials_context_mod.c',
    'src/sundials/fmod/fsundials_nvector_mod.c',
    'src/sundials/fmod/fsundials_matrix_mod.c',
    'src/sundials/sundials_linearsolver.c',
    'src/sundials/sundials_nvector_senswrapper.c',
    'src/sundials/sundials_context.c',
    'src/sundials/sundials_math.c',
    'src/sundials/sundials_matrix.c',
    'src/sundials/sundials_nonlinearsolver.c',
    'src/sundials/sundials_memory.c',
    'src/sundials/sundials_nvector.c',
    'src/sundials/sundials_direct.c',
    'src/sundials/sundials_dense.c',
    'src/sundials/sundials_profiler.c',
    'src/sundials/sundials_band.c',
    # 'src/sundials/sundials_xbraid.c',
    'src/sunmemory/system/sundials_system_memory.c',
    'src/idas/fmod/fidas_mod.c',
    'src/idas/idas_bbdpre.c',
    'src/idas/idas.c',
    'src/idas/idas_nls_sim.c',
    'src/idas/idas_ic.c',
    'src/idas/idas_spils.c',
    'src/idas/idas_nls_stg.c',
    'src/idas/idaa.c',
    'src/idas/idaa_io.c',
    'src/idas/idas_direct.c',
    'src/idas/idas_ls.c',
    'src/idas/idas_nls.c',
    'src/idas/idas_io.c',
    'src/kinsol/fmod/fkinsol_mod.c',
    'src/kinsol/kinsol_direct.c',
    'src/kinsol/kinsol_spils.c',
    'src/kinsol/kinsol_bbdpre.c',
    'src/kinsol/kinsol_io.c',
    'src/kinsol/kinsol_ls.c',
    'src/kinsol/kinsol.c',
    # 'src/nvector/parallel/fmod/fnvector_parallel_mod.c',
    # 'src/nvector/parallel/nvector_parallel.c',
    'src/nvector/manyvector/fmod/fnvector_manyvector_mod.c',
    # 'src/nvector/manyvector/fmod/fnvector_mpimanyvector_mod.c',
    'src/nvector/manyvector/nvector_manyvector.c',
    # 'src/nvector/mpiplusx/fmod/fnvector_mpiplusx_mod.c',
    # 'src/nvector/mpiplusx/nvector_mpiplusx.c',
    # 'src/nvector/openmpdev/nvector_openmpdev.c',
    'src/nvector/pthreads/nvector_pthreads.c',
    'src/nvector/pthreads/fmod/fnvector_pthreads_mod.c',
    # 'src/nvector/petsc/nvector_petsc.c',
    # 'src/nvector/parhyp/nvector_parhyp.c',
    'src/nvector/serial/fmod/fnvector_serial_mod.c',
    'src/nvector/serial/nvector_serial.c',
    # 'src/nvector/openmp/fmod/fnvector_openmp_mod.c',
    # 'src/nvector/openmp/nvector_openmp.c',
    'src/cvodes/cvodes_io.c',
    'src/cvodes/cvodes_ls.c',
    'src/cvodes/fmod/fcvodes_mod.c',
    'src/cvodes/cvodes_bandpre.c',
    'src/cvodes/cvodes_nls_sim.c',
    'src/cvodes/cvodes_diag.c',
    'src/cvodes/cvodea_io.c',
    'src/cvodes/cvodes_nls_stg.c',
    'src/cvodes/cvodes_bbdpre.c',
    'src/cvodes/cvodes_nls_stg1.c',
    'src/cvodes/cvodea.c',
    'src/cvodes/cvodes_direct.c',
    'src/cvodes/cvodes_spils.c',
    'src/cvodes/cvodes_nls.c',
    'src/cvodes/cvodes.c'
)

sundials_f_sources = files(
    'src/sunnonlinsol/newton/fmod/fsunnonlinsol_newton_mod.f90',
    'src/sunnonlinsol/fixedpoint/fmod/fsunnonlinsol_fixedpoint_mod.f90',
    'src/sunlinsol/pcg/fmod/fsunlinsol_pcg_mod.f90',
    'src/sunlinsol/band/fmod/fsunlinsol_band_mod.f90',
    'src/sunlinsol/spbcgs/fmod/fsunlinsol_spbcgs_mod.f90',
    'src/sunlinsol/dense/fmod/fsunlinsol_dense_mod.f90',
    'src/sunlinsol/spfgmr/fmod/fsunlinsol_spfgmr_mod.f90',
    'src/sunlinsol/sptfqmr/fmod/fsunlinsol_sptfqmr_mod.f90',
    'src/sunlinsol/spgmr/fmod/fsunlinsol_spgmr_mod.f90',
    # 'src/sunlinsol/klu/fmod/fsunlinsol_klu_mod.f90',
    'src/sunmatrix/band/fmod/fsunmatrix_band_mod.f90',
    'src/sunmatrix/dense/fmod/fsunmatrix_dense_mod.f90',
    'src/sunmatrix/sparse/fmod/fsunmatrix_sparse_mod.f90',
    'src/sundials/fmod/fsundials_types_mod.f90',
    'src/sundials/fmod/fsundials_context_mod.F90', # use .F90 not f90 for C-preprocessor
    'src/sundials/fmod/fsundials_futils_mod.f90',
    'src/sundials/fmod/fsundials_matrix_mod.f90',
    'src/sundials/fmod/fsundials_profiler_mod.f90',
    'src/sundials/fmod/fsundials_linearsolver_mod.f90',
    'src/sundials/fmod/fsundials_nvector_mod.f90',
    'src/sundials/fmod/fsundials_nonlinearsolver_mod.f90',
    'src/idas/fmod/fidas_mod.f90',
    'src/kinsol/fmod/fkinsol_mod.f90',
    # 'src/nvector/parallel/fmod/fnvector_parallel_mod.f90',
    # 'src/nvector/manyvector/fmod/fnvector_manyvector_mod.f90',
    # 'src/nvector/manyvector/fmod/fnvector_mpimanyvector_mod.f90',
    # 'src/nvector/mpiplusx/fmod/fnvector_mpiplusx_mod.f90',
    'src/nvector/pthreads/fmod/fnvector_pthreads_mod.f90',
    'src/nvector/serial/fmod/fnvector_serial_mod.f90',
    # 'src/nvector/openmp/fmod/fnvector_openmp_mod.f90',
    'src/cvodes/fmod/fcvodes_mod.f90'    
)

sundials_sources = sundials_f_sources + sundials_c_sources

libsundials = static_library('sundials', sundials_sources,
                              install: true,
                              include_directories : sundials_inc)

libsundials_dep = declare_dependency(include_directories : sundials_inc,
                                     link_with : libsundials,
                                     variables : {'version': '6.1.1'})
