t_debug = executable('debug', files('debug_test.f90'), link_with : fazanglib)
test('debug', t_debug)

t_test = executable('test_test', files('test_test.f90'), link_with : fazanglib)
test('check', t_test)

t_vari = executable('vari_test', files('vari_test.f90'), link_with : fazanglib)
test('vari', t_vari)

t_var = executable('var_test', files('var_test.f90'), link_with : fazanglib)
test('var', t_var)

t_sin = executable('sin_test', files('sin_test.f90'), link_with : fazanglib)
test('sin', t_sin)

t_cos = executable('cos_test', files('cos_test.f90'), link_with : fazanglib)
test('cos', t_cos)

t_tan = executable('tan_test', files('tan_test.f90'), link_with : fazanglib)
test('tan', t_tan)

t_asin = executable('asin_test', files('asin_test.f90'), link_with : fazanglib)
test('asin', t_asin)

t_acos = executable('acos_test', files('acos_test.f90'), link_with : fazanglib)
test('acos', t_acos)

t_atan = executable('atan_test', files('atan_test.f90'), link_with : fazanglib)
test('atan', t_atan)

t_sqrt = executable('sqrt_test', files('sqrt_test.f90'), link_with : fazanglib)
test('sqrt', t_sqrt)

t_exp = executable('exp_test', files('exp_test.f90'), link_with : fazanglib)
test('exp', t_exp)

t_log = executable('log_test', files('log_test.f90'), link_with : fazanglib)
test('log', t_log)

t_add = executable('add_test', files('add_test.f90'), link_with : fazanglib)
test('add', t_add)
