t_debug = executable('debug', files('debug_test.f90'), link_with : fazanglib)
test('debug', t_debug)

t_test = executable('test_test', files('test_test.f90'), link_with : fazanglib)
test('check', t_test)

t_tape = executable('tape_test', files('tape_test.f90'), link_with : fazanglib)
test('tape', t_tape)

t_vari = executable('vari_test', files('vari_test.f90'), link_with : fazanglib)
test('vari', t_vari)

t_var = executable('var_test', files('var_test.f90'), link_with : fazanglib)
test('var', t_var)

t_sin = executable('sin_test', files('sin_test.f90'), link_with : fazanglib)
test('sin', t_sin)

t_cos = executable('cos_test', files('cos_test.f90'), link_with : fazanglib)
test('cos', t_cos)

t_tan = executable('tan_test', files('tan_test.f90'), link_with : fazanglib)
test('tan', t_tan)

t_asin = executable('asin_test', files('asin_test.f90'), link_with : fazanglib)
test('asin', t_asin)

t_acos = executable('acos_test', files('acos_test.f90'), link_with : fazanglib)
test('acos', t_acos)

t_atan = executable('atan_test', files('atan_test.f90'), link_with : fazanglib)
test('atan', t_atan)

t_sqrt = executable('sqrt_test', files('sqrt_test.f90'), link_with : fazanglib)
test('sqrt', t_sqrt)

t_exp = executable('exp_test', files('exp_test.f90'), link_with : fazanglib)
test('exp', t_exp)

t_log = executable('log_test', files('log_test.f90'), link_with : fazanglib)
test('log', t_log)

t_rel = executable('rel_test', files('rel_test.f90'), link_with : fazanglib)
test('relational', t_rel)

t_add = executable('add_test', files('add_test.f90'), link_with : fazanglib)
test('add', t_add)

t_sub = executable('sub_test', files('sub_test.f90'), link_with : fazanglib)
test('sub', t_sub)

t_mul = executable('mul_test', files('mul_test.f90'), link_with : fazanglib)
test('mul', t_mul)

t_div = executable('div_test', files('div_test.f90'), link_with : fazanglib)
test('div', t_div)

t_sum = executable('sum_test', files('sum_test.f90'), link_with : fazanglib)
test('sum', t_sum)

t_dot = executable('dot_test', files('dot_product_test.f90'), link_with : fazanglib)
test('dot_product', t_dot)

t_matmul = executable('matmul_test', files('matmul_test.f90'), link_with : fazanglib)
test('matmul', t_matmul)

t_nest = executable('nest_test', files('nest_test.f90'), link_with : fazanglib)
test('nest', t_nest)

t_pow = executable('pow_test', files('pow_test.f90'), link_with : fazanglib)
test('pow', t_pow)

t_grad = executable('grad_test', files('grad_test.f90'), link_with : fazanglib)
test('grad', t_grad)

t_var_grad = executable('var_grad_test', files('var_grad_test.f90'), link_with : fazanglib)
test('var_grad', t_var_grad)

t_alloc = executable('alloc_test', files('alloc_test.f90'), link_with : fazanglib)
test('alloc', t_alloc)
