t_debug = executable('debug', files('debug_test.F90'), dependencies : fazang_dep)
test('debug', t_debug)

t_test = executable('test_test', files('test_test.F90'), dependencies : fazang_dep)
test('check', t_test)

t_tape = executable('tape_test', files('tape_test.F90'), dependencies : fazang_dep)
test('tape', t_tape)

t_vari = executable('vari_test', files('vari_test.F90'), dependencies : fazang_dep)
test('vari', t_vari)

t_var = executable('var_test', files('var_test.F90'), dependencies : fazang_dep)
test('var', t_var)

t_sin = executable('sin_test', files('sin_test.F90'), dependencies : fazang_dep)
test('sin', t_sin)

t_cos = executable('cos_test', files('cos_test.F90'), dependencies : fazang_dep)
test('cos', t_cos)

t_tan = executable('tan_test', files('tan_test.F90'), dependencies : fazang_dep)
test('tan', t_tan)

t_asin = executable('asin_test', files('asin_test.F90'), dependencies : fazang_dep)
test('asin', t_asin)

t_acos = executable('acos_test', files('acos_test.F90'), dependencies : fazang_dep)
test('acos', t_acos)

t_atan = executable('atan_test', files('atan_test.F90'), dependencies : fazang_dep)
test('atan', t_atan)

t_sqrt = executable('sqrt_test', files('sqrt_test.F90'), dependencies : fazang_dep)
test('sqrt', t_sqrt)

t_exp = executable('exp_test', files('exp_test.F90'), dependencies : fazang_dep)
test('exp', t_exp)

t_log = executable('log_test', files('log_test.F90'), dependencies : fazang_dep)
test('log', t_log)

t_rel = executable('rel_test', files('rel_test.F90'), dependencies : fazang_dep)
test('relational', t_rel)

t_add = executable('add_test', files('add_test.F90'), dependencies : fazang_dep)
test('add', t_add)

t_sub = executable('sub_test', files('sub_test.F90'), dependencies : fazang_dep)
test('sub', t_sub)

t_mul = executable('mul_test', files('mul_test.F90'), dependencies : fazang_dep)
test('mul', t_mul)

t_div = executable('div_test', files('div_test.F90'), dependencies : fazang_dep)
test('div', t_div)

t_sum = executable('sum_test', files('sum_test.F90'), dependencies : fazang_dep)
test('sum', t_sum)

t_dot = executable('dot_test', files('dot_product_test.F90'), dependencies : fazang_dep)
test('dot_product', t_dot)

t_matmul = executable('matmul_test', files('matmul_test.F90'), dependencies : fazang_dep)
test('matmul', t_matmul)

t_nest = executable('nest_test', files('nest_test.F90'), dependencies : fazang_dep)
test('nest', t_nest)

t_pow = executable('pow_test', files('pow_test.F90'), dependencies : fazang_dep)
test('pow', t_pow)

t_grad = executable('grad_test', files('grad_test.F90'), dependencies : fazang_dep)
test('grad', t_grad)

t_var_grad = executable('var_grad_test', files('var_grad_test.F90'), dependencies : fazang_dep)
test('var_grad', t_var_grad)

t_alloc = executable('alloc_test', files('alloc_test.F90'), dependencies : fazang_dep)
test('alloc', t_alloc)

t_log_sum_exp = executable('log_sum_exp_test', files('log_sum_exp_test.F90'), dependencies : fazang_dep)
test('log_sum_exp', t_log_sum_exp)

t_logit = executable('logit_test', files('logit_test.F90'), dependencies : fazang_dep)
test('logit', t_logit)

t_inv_logit = executable('inv_logit_test', files('inv_logit_test.F90'), dependencies : fazang_dep)
test('inv_logit', t_inv_logit)

t_erf = executable('erf_test', files('erf_test.F90'), dependencies : fazang_dep)
test('erf', t_erf)

t_norm2 = executable('norm2_test', files('norm2_test.F90'), dependencies : fazang_dep)
test('norm2', t_norm2)

t_abs = executable('abs_test', files('abs_test.F90'), dependencies : fazang_dep)
test('abs', t_abs)

t_hypot = executable('hypot_test', files('hypot_test.F90'), dependencies : fazang_dep)
test('hypot', t_hypot)

t_hyperbolic = executable('hyperbolic_test', files('hyperbolic_test.F90'), dependencies : fazang_dep)
test('hyperbolic', t_hyperbolic)

t_digamma = executable('digamma_test', files('digamma_test.F90'), dependencies : fazang_dep)
test('digamma', t_digamma)

t_log_gamma = executable('log_gamma_test', files('log_gamma_test.F90'), dependencies : fazang_dep)
test('log_gamma', t_log_gamma)
